# stasher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  stasher.files  stasher.includes
stasher/: connection.h  constants.h  datastore.h  entity.cpp  entity.h  exceptions.h  id_allocator.cpp  id_allocator.h  journal.cpp  journal.h  key.cpp  key.h  property.cpp  property.h  time_utils.cpp  time_utils.h  types.h  validators.cpp  validators.h
tests/: CMakeLists.txt  test_journal.h
