FILE(GLOB_RECURSE TEST_FILES *.h)
FILE(GLOB_RECURSE TEST_SOURCES *.cpp)

ADD_CUSTOM_COMMAND(
    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
    COMMAND ${KAZTEST_EXECUTABLE} --output ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${TEST_FILES}
    DEPENDS ${TEST_FILES} ${KAZTEST_EXECUTABLE}
)

ADD_EXECUTABLE(stasher_tests ${TEST_FILES} ${TEST_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
ADD_TEST(stasher_suite stasher_tests)

TARGET_LINK_LIBRARIES(
    stasher_tests
    stasher
)

